<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="root">

    <Preference
        android:title="@string/cars"
        android:summary="@string/cars_sum"
        android:key="cars" />

    <Preference
        android:title="@string/alarm_sound"
        android:summary="@string/def"
        android:key="alarm" />

    <Preference
        android:title="@string/alarm_test"
        android:summary="@string/alarm_test_sum"
        android:key="alarm_test" />

    <Preference
        android:title="@string/notify_sound"
        android:summary="@string/def"
        android:key="notify" />

    <Preference
        android:title="@string/password"
        android:summary="@string/password_summary"
        android:key="password" />

</PreferenceScreen>
