<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/preferences" />

    <item
        android:id="@+id/cars"
        android:icon="@drawable/ic_auto"
        android:orderInCategory="400"
        android:title="@string/cars" />

    <item
        android:id="@+id/charts"
        android:icon="@drawable/ic_graphics"
        android:orderInCategory="200"
        android:title="@string/charts" />

    <item
        android:id="@+id/maintenance"
        android:icon="@drawable/ic_obslyg"
        android:orderInCategory="300"
        android:title="@string/maintenance" />

    <item
        android:id="@+id/passwd"
        android:icon="@drawable/ic_password"
        android:orderInCategory="500"
        android:title="@string/password" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="600"
        android:title="@string/about" />
</menu>