<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:car="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        car:showAsAction="always" />
    <item
        android:id="@+id/my"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/position"
        car:showAsAction="ifRoom" />
    <item
        android:id="@+id/map"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/map"
        car:showAsAction="ifRoom" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/google"
            android:title="@string/google"
            car:showAsAction="never" />
        <item
            android:id="@+id/osm"
            android:title="@string/osm"
            car:showAsAction="never" />
    </group>
</menu>