<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/old_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/password_old" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textPassword"
        android:maxLength="12"
        android:minEms="12" />

    <TextView
        android:id="@+id/invalid_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_password"
        android:textColor="@color/error"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textPassword"
        android:maxLength="12"
        android:minEms="12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textPassword"
        android:maxLength="12"
        android:minEms="12" />

    <TextView
        android:id="@+id/invalid_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_confirm"
        android:textColor="@color/error"
        android:visibility="invisible" />

    <Button
        android:id="@+id/graphic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_dialog"
        android:text="@string/graphics_code" />

</LinearLayout>